--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -13,6 +13,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
+  --sbb-header-action-translate-y: 0;
 
   // The variable is assigned to the property in the sbb-header component if it is
   // the first element in the header and needs left offset correction (see sbb-header.scss).
@@ -44,9 +45,9 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 }
 
 @include sbb.hover-mq($hover: true) {
-  :host(:hover) {
+  :host(:hover:not(:active)) {
     --sbb-header-action-background-color: var(--sbb-color-milk-default);
-    --sbb-header-action-translate: #{sbb.px-to-rem-build(-1)};
+    --sbb-header-action-translate-y: #{sbb.px-to-rem-build(-1)};
   }
 }
 
@@ -58,6 +59,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   @include sbb.button-reset;
   @include sbb.text-inherit;
 
+  color: var(--sbb-color-black-default);
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -68,9 +70,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   min-width: var(--sbb-header-action-min-width);
   padding-inline: var(--sbb-header-action-padding-inline);
   border-radius: var(--sbb-border-radius-16x);
-  transition-property: background-color;
-  transition-duration: var(--sbb-animation-duration-6x);
-  transition-timing-function: ease;
+  transition: background-color var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
   cursor: pointer;
   gap: var(--sbb-spacing-fixed-2x);
 
@@ -81,11 +81,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 .sbb-header-action__icon,
 .sbb-header-action__text {
-  color: var(--sbb-color-black-default);
-  transform: translateY(var(--sbb-header-action-translate));
-  transition-property: transform;
-  transition-duration: var(--sbb-animation-duration-6x);
-  transition-timing-function: ease;
+  transform: translateY(var(--sbb-header-action-translate-y));
+  transition: transform var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
 }
 
 .sbb-header-action__icon {
