--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -13,6 +13,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
+  --sbb-header-action-animation-duration: var(--sbb-animation-duration-2x);
   --sbb-header-action-translate-y: 0;
 
   // The variable is assigned to the property in the sbb-header component if it is
@@ -32,7 +33,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 @each $breakpoint in $breakpoints {
   :host([expand-from='#{$breakpoint}']) {
     @include sbb.mq($from: $breakpoint) {
-      --sbb-header-action-text-display: block;
+      --sbb-header-action-text-display: flex;
       --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
 
       // If expanded, move it left by left padding.
@@ -59,6 +60,9 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   @include sbb.button-reset;
   @include sbb.text-inherit;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: var(--sbb-color-black-default);
   text-decoration: none;
   background-color: var(--sbb-header-action-background-color);
@@ -66,7 +70,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   min-width: var(--sbb-header-action-min-width);
   padding-inline: var(--sbb-header-action-padding-inline);
   border-radius: var(--sbb-border-radius-16x);
-  transition: background-color var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
+  transition: background-color var(--sbb-header-action-animation-duration)
+    var(--sbb-animation-easing);
   cursor: pointer;
 
   &:focus-visible {
@@ -76,13 +81,17 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 .sbb-header-action__wrapper {
   display: flex;
-  align-items: center;
   gap: var(--sbb-spacing-fixed-2x);
-  justify-content: center;
   white-space: nowrap;
   transform: translateY(var(--sbb-header-action-translate-y));
-  transition: transform var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
+  transition: transform var(--sbb-header-action-animation-duration) var(--sbb-animation-easing);
   will-change: transform;
+}
+
+.sbb-header-action__icon,
+.sbb-header-action__text {
+  // Vertical alignment fix for Safari
+  align-items: center;
 }
 
 .sbb-header-action__icon {
@@ -90,6 +99,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-icon-svg-stroke-color: currentcolor;
   --sbb-icon-svg-stroke-width: 0.5px;
 
+  display: flex;
   min-width: var(--sbb-size-icon-ui-small);
   min-height: var(--sbb-size-icon-ui-small);
   line-height: 0;
