--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -133,8 +133,8 @@
     border-radius: var(--sbb-menu-border-radius);
 
     &[open] {
-      inset-block-start: var(--sbb-menu-position-y);
-      inset-inline-start: var(--sbb-menu-position-x);
+      top: var(--sbb-menu-position-y);
+      left: var(--sbb-menu-position-x);
       max-height: var(--sbb-menu-max-height);
       min-height: var(--sbb-menu-min-height);
     }
