feat: manage overlays display property

--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -48,6 +48,10 @@
   }
 }
 
+:host(:not(.hydrated)) {
+  display: none;
+}
+
 :host([data-state='opened']) {
   --sbb-navigation-section-pointer-events: all;
 }
