--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -27,8 +27,7 @@
   --sbb-scrollbar-color: var(--sbb-color-black-alpha-30);
   --sbb-scrollbar-color-hover: var(--sbb-color-black-alpha-60);
 
-  position: absolute;
-  inset: 0 auto auto 0;
+  display: contents;
 
   @include sbb.mq($from: micro) {
     --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-6x);
@@ -46,6 +45,10 @@
     );
     --sbb-dialog-max-height: calc(100vh - var(--sbb-spacing-fixed-16x));
   }
+}
+
+:host(:not(.hydrated)) {
+  display: none;
 }
 
 :host(:is([data-state='opened'], [data-state='opening'])) {
