--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -23,8 +23,7 @@
   --sbb-menu-pointer-events: none;
   --sbb-menu-backdrop-color: transparent;
 
-  position: absolute;
-  inset: 0 auto auto 0;
+  display: contents;
 
   @include sbb.mq($from: medium) {
     --sbb-menu-position: absolute;
@@ -32,6 +31,10 @@
     --sbb-menu-max-width: #{sbb.px-to-rem-build(320)};
     --sbb-menu-min-width: #{sbb.px-to-rem-build(180)};
   }
+}
+
+:host(:not(.hydrated)) {
+  display: none;
 }
 
 :host(:is([data-state='opened'], [data-state='opening'])) {
