--- a/src/components/sbb-tooltip/sbb-tooltip.scss
+++ b/src/components/sbb-tooltip/sbb-tooltip.scss
@@ -19,8 +19,11 @@
   --sbb-tooltip-animation-easing: ease-out;
   --sbb-tooltip-transform: translateY(var(--sbb-spacing-fixed-2x));
 
-  position: absolute;
-  inset: 0 auto auto 0;
+  display: contents;
+}
+
+:host(:not(.hydrated)) {
+  display: none;
 }
 
 :host([disable-animation]:not([disable-animation='false'])) {
