--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -19,6 +19,27 @@
   height: var(--sbb-header-height);
 }
 
+:host([data-shadow]) {
+  @include sbb.shadow-level-9-soft;
+}
+
+:host([hide-on-scroll]) {
+  --sbb-header-position: absolute;
+}
+
+:host([hide-on-scroll][data-animated]) {
+  transition: all var(--sbb-header-animation-duration) var(--sbb-animation-easing);
+}
+
+:host([hide-on-scroll][data-fixed-header]) {
+  --sbb-header-position: fixed;
+  --sbb-header-translate-y: -100%;
+}
+
+:host([hide-on-scroll][data-fixed-header][data-visible-header]) {
+  --sbb-header-translate-y: 0;
+}
+
 .sbb-header {
   position: var(--sbb-header-position);
   inset: 0 0 auto;
@@ -27,29 +48,8 @@
   transition: box-shadow var(--sbb-header-animation-duration) var(--sbb-animation-easing);
   transform: translateY(var(--sbb-header-translate-y));
 
-  :host([hide-on-scroll]) & {
-    --sbb-header-position: absolute;
-  }
-
-  :host([data-shadow]) & {
-    @include sbb.shadow-level-9-soft;
-  }
-
   @include sbb.if-forced-colors {
     border-block-end: var(--sbb-border-width-1x) solid CanvasText;
-  }
-
-  :host([hide-on-scroll][data-animated]) & {
-    transition: all var(--sbb-header-animation-duration) var(--sbb-animation-easing);
-  }
-
-  :host([hide-on-scroll][data-fixed-header]) & {
-    --sbb-header-position: fixed;
-    --sbb-header-translate-y: -100%;
-  }
-
-  :host([hide-on-scroll][data-fixed-header][data-visible-header]) & {
-    --sbb-header-translate-y: 0;
   }
 }
 
@@ -59,7 +59,6 @@
   justify-content: flex-start;
   height: var(--sbb-header-height);
 
-  /* stylelint-disable-next-line plugin/stylelint-bem-namics */
   :host(:not([expanded]:not([expanded='false']))) & {
     @include sbb.page-spacing;
   }
