--- a/src/global/styles/mixins/panel.scss
+++ b/src/global/styles/mixins/panel.scss
@@ -7,34 +7,35 @@
 // ----------------------------------------------------------------------------------------------------
 
 @mixin panel-variables {
-  --panel-width: #{functions.px-to-rem-build(223)};
-  --panel-height: #{functions.px-to-rem-build(167)};
-  --panel-triangle-height: #{functions.px-to-rem-build(33)};
-  --panel-font-family: var(--sbb-typo-type-face-sbb-light);
-  --panel-letter-spacing: var(--sbb-typo-letter-spacing-titles);
-  --panel-line-height: var(--sbb-typo-line-height-titles);
-  --panel-font-size: var(--sbb-typo-scale-1-5x);
-  --panel-color: var(--sbb-color-white-default);
-  --panel-background-color: var(--sbb-color-red-alpha-90);
-  --panel-background-color-hover: var(--sbb-color-red-default);
-  --panel-padding-inline: var(--sbb-spacing-responsive-m);
-  --panel-gap: var(--sbb-spacing-responsive-xs);
-  --panel-animation-duration: var(--sbb-animation-duration-4x);
-  --panel-animation-easing: var(--sbb-animation-easing);
+  --sbb-panel-width: #{functions.px-to-rem-build(223)};
+  --sbb-panel-inner-height: #{functions.px-to-rem-build(167)};
+  --sbb-panel-triangle-height: #{functions.px-to-rem-build(33)};
+  --sbb-panel-height: calc(var(--sbb-panel-inner-height) + 2 * var(--sbb-panel-triangle-height));
+  --sbb-panel-font-family: var(--sbb-typo-type-face-sbb-light);
+  --sbb-panel-letter-spacing: var(--sbb-typo-letter-spacing-titles);
+  --sbb-panel-line-height: var(--sbb-typo-line-height-titles);
+  --sbb-panel-font-size: var(--sbb-typo-scale-1-5x);
+  --sbb-panel-color: var(--sbb-color-white-default);
+  --sbb-panel-background-color: var(--sbb-color-red-alpha-90);
+  --sbb-panel-background-color-hover: var(--sbb-color-red-default);
+  --sbb-panel-padding-inline: var(--sbb-spacing-responsive-m);
+  --sbb-panel-gap: var(--sbb-spacing-responsive-xs);
+  --sbb-panel-animation-duration: var(--sbb-animation-duration-4x);
+  --sbb-panel-animation-easing: var(--sbb-animation-easing);
 
   @include mediaqueries.mq($from: medium) {
-    --panel-width: #{functions.px-to-rem-build(321)};
-    --panel-height: #{functions.px-to-rem-build(240.11)};
-    --panel-triangle-height: #{functions.px-to-rem-build(47.45)};
-    --panel-font-size: var(--sbb-typo-scale-2x);
+    --sbb-panel-width: #{functions.px-to-rem-build(321)};
+    --sbb-panel-inner-height: #{functions.px-to-rem-build(240.11)};
+    --sbb-panel-triangle-height: #{functions.px-to-rem-build(47.45)};
+    --sbb-panel-font-size: var(--sbb-typo-scale-2x);
   }
 
   @include mediaqueries.mq($from: large) {
-    --panel-width: #{functions.px-to-rem-build(428)};
-    --panel-height: #{functions.px-to-rem-build(320.38)};
-    --panel-triangle-height: #{functions.px-to-rem-build(63.31)};
-    --panel-font-size: var(--sbb-typo-scale-2-5x);
-    --panel-line-height: 1.2;
+    --sbb-panel-width: #{functions.px-to-rem-build(428)};
+    --sbb-panel-inner-height: #{functions.px-to-rem-build(320.38)};
+    --sbb-panel-triangle-height: #{functions.px-to-rem-build(63.31)};
+    --sbb-panel-font-size: var(--sbb-typo-scale-2-5x);
+    --sbb-panel-line-height: 1.2;
   }
 }
 
@@ -43,23 +44,23 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: var(--panel-gap);
-  width: var(--panel-width);
-  height: calc(var(--panel-height) + 2 * var(--panel-triangle-height));
-  padding-block: var(--panel-triangle-height);
-  padding-inline: var(--panel-padding-inline);
+  gap: var(--sbb-panel-gap);
+  width: var(--sbb-panel-width);
+  height: var(--sbb-panel-height);
+  padding-block: var(--sbb-panel-triangle-height);
+  padding-inline: var(--sbb-panel-padding-inline);
   clip-path: polygon(
     0 0,
-    100% var(--panel-triangle-height),
-    100% calc(100% - var(--panel-triangle-height)),
+    100% var(--sbb-panel-triangle-height),
+    100% calc(100% - var(--sbb-panel-triangle-height)),
     0% 100%
   );
-  background-color: var(--panel-background-color);
-  transition: background var(--panel-animation-duration) var(--panel-animation-easing);
+  background-color: var(--sbb-panel-background-color);
+  transition: background var(--sbb-panel-animation-duration) var(--sbb-panel-animation-easing);
 
   @include mediaqueries.hover-mq($hover: true) {
     &:hover {
-      --panel-background-color: var(--panel-background-color-hover);
+      --sbb-panel-background-color: var(--sbb-panel-background-color-hover);
     }
   }
 }
@@ -67,10 +68,10 @@
 @mixin panel-text {
   @include typo.font-smoothing;
 
-  font-family: var(--panel-font-family);
-  font-size: var(--panel-font-size);
+  font-family: var(--sbb-panel-font-family);
+  font-size: var(--sbb-panel-font-size);
   font-weight: normal;
-  line-height: var(--panel-line-height);
-  letter-spacing: var(--panel-letter-spacing);
-  color: var(--panel-color);
+  line-height: var(--sbb-panel-line-height);
+  letter-spacing: var(--sbb-panel-letter-spacing);
+  color: var(--sbb-panel-color);
 }
