fix(sbb-teaser): add outline for windows high contrast mode

--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -35,6 +35,16 @@
 
     border-radius: var(--sbb-teaser-border-radius);
   }
+
+  @include sbb.if-forced-colors {
+    outline-offset: var(--sbb-focus-outline-offset);
+    outline: CanvasText solid var(--sbb-focus-outline-width);
+    border-radius: var(--sbb-teaser-border-radius);
+
+    &:hover {
+      outline-color: Highlight;
+    }
+  }
 }
 
 .sbb-teaser__container {
