--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -32,6 +32,9 @@
   --sbb-navigation-content-transform: translateX(0);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
+  // We use this rule to make the inner container element to appear as if it were a
+  // direct child of the host's parent element. This is useful because the host
+  // should be ignored when using CSS grid or similar layout techniques.
   display: contents;
 
   @include sbb.mq($from: medium) {
