--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -19,27 +19,23 @@
   --sbb-navigation-padding-inline: var(--sbb-layout-base-offset-responsive);
   --sbb-navigation-padding-block-start: var(--sbb-spacing-responsive-l);
   --sbb-navigation-padding-block-end: var(--sbb-spacing-responsive-xl);
+  --sbb-navigation-backdrop-visibility: hidden;
+  --sbb-navigation-backdrop-pointer-events: none;
   --sbb-navigation-backdrop-color: transparent;
   --sbb-navigation-list-margin-block-start: var(--sbb-spacing-responsive-xxl);
   --sbb-navigation-inline-start: 0;
+  --sbb-navigation-height: 100vh;
   --sbb-navigation-width: 100%;
   --sbb-navigation-expanded-width: 100%;
+  --sbb-navigation-inset: 0 auto auto 0;
+  --sbb-navgation-transform: translateX(-100%);
   --sbb-navigation-content-transform: translateX(0);
   --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
 
-  // TODO: try to refactor removing the style from the host element
-
-  padding-inline: 0;
-  position: fixed;
-  inset-inline-start: 0;
-  inset-block-start: 0;
-  pointer-events: none;
-  overflow: hidden;
-  z-index: 10;
-
-  ::slotted(:first-child) {
-    margin-block-start: var(--sbb-navigation-list-margin-block-start);
-  }
+  // We use this rule to make the inner container element to appear as if it were a
+  // direct child of the host's parent element. This is useful because the host
+  // should be ignored when using CSS grid or similar layout techniques.
+  display: contents;
 
   @include sbb.mq($from: medium) {
     --sbb-navigation-grid-column: 1 / 9;
@@ -53,20 +49,6 @@
     --sbb-navigation-list-margin-block-start: var(--sbb-spacing-fixed-1x);
     --sbb-navigation-inline-start: calc(var(--sbb-layout-base-offset-responsive) * -1);
     --sbb-navigation-width: calc(100% + var(--sbb-layout-base-offset-responsive));
-
-    padding-inline: var(--sbb-layout-base-offset-responsive);
-
-    // Navigation backdrop (not visible on mobile)
-    &::before {
-      @include transition(background-color, visibility);
-
-      content: '';
-      visibility: hidden;
-      pointer-events: none;
-      position: fixed;
-      inset: 0;
-      background-color: var(--sbb-navigation-backdrop-color);
-    }
   }
 
   @include sbb.mq($from: ultra) {
@@ -75,27 +57,26 @@
   }
 }
 
-:host(:not(.sbb-navigation-section--closed)) {
-  inset: 0;
+:host(:not(.hydrated)) {
+  display: none;
 }
 
-:host(.sbb-navigation--opened),
-:host(.sbb-navigation--opening) {
-  @include sbb.mq($from: large) {
-    --sbb-navigation-backdrop-color: var(--sbb-color-black-alpha-70);
-
-    &::before {
-      visibility: visible;
-      pointer-events: all;
-    }
-  }
-}
-
-:host(.sbb-navigation--opened) {
+:host([data-state='opened']) {
   --sbb-navigation-animation-easing: ease-out;
 }
 
-:host(.sbb-navigation--has-navigation-section) {
+:host(:is([data-state='opened'], [data-state='opening'])) {
+  --sbb-navigation-backdrop-visibility: visible;
+  --sbb-navigation-backdrop-pointer-events: all;
+  --sbb-navigation-backdrop-color: var(--sbb-color-black-alpha-70);
+}
+
+:host(:not([data-state='closed'])) {
+  --sbb-navigation-inset: 0;
+  --sbb-navgation-transform: translateX(0);
+}
+
+:host([data-has-navigation-section]) {
   --sbb-navigation-content-transform: translateX(-100%);
 
   @include sbb.mq($from: 'large') {
@@ -110,6 +91,30 @@
 
 .sbb-navigation__container {
   @include sbb.grid-base;
+
+  padding-inline: 0;
+  position: fixed;
+  inset: var(--sbb-navigation-inset);
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 10;
+  transform: var(--sbb-navgation-transform);
+
+  @include sbb.mq($from: large) {
+    padding-inline: var(--sbb-layout-base-offset-responsive);
+
+    // Navigation backdrop (not visible on mobile)
+    &::before {
+      @include transition(background-color, visibility);
+
+      content: '';
+      visibility: var(--sbb-navigation-backdrop-visibility);
+      pointer-events: var(--sbb-navigation-backdrop-pointer-events);
+      position: fixed;
+      inset: var(--sbb-navigation-inset);
+      background-color: var(--sbb-navigation-backdrop-color);
+    }
+  }
 }
 
 .sbb-navigation {
@@ -127,7 +132,7 @@
   inset-block-start: 0;
   border: none;
   pointer-events: none;
-  height: 100vh;
+  height: var(--sbb-navigation-height);
   color: var(--sbb-color-white-default);
   background-color: var(--sbb-color-midnight-default);
 
@@ -137,7 +142,7 @@
     content: '';
     position: absolute;
     width: var(--sbb-navigation-expanded-width);
-    height: 100%;
+    height: var(--sbb-navigation-height);
     background: var(--sbb-color-midnight-default);
   }
 
@@ -153,7 +158,7 @@
     }
   }
 
-  :host(.sbb-navigation--closing) & {
+  :host([data-state='closing']) & {
     pointer-events: none;
     animation-name: close;
   }
@@ -191,12 +196,16 @@
   flex-direction: column;
   gap: var(--sbb-spacing-responsive-xxl);
   position: relative;
-  height: 100vh;
+  height: var(--sbb-navigation-height);
   padding-inline: var(--sbb-navigation-padding-inline);
   padding-block-start: var(--sbb-navigation-padding-block-start);
   padding-block-end: var(--sbb-navigation-padding-block-end);
   overflow-y: auto;
   transform: var(--sbb-navigation-content-transform);
+}
+
+::slotted(:first-child) {
+  margin-block-start: var(--sbb-navigation-list-margin-block-start);
 }
 
 @keyframes open {
