--- a/src/components/sbb-logo/sbb-logo.scss
+++ b/src/components/sbb-logo/sbb-logo.scss
@@ -20,6 +20,8 @@
     --sbb-logo-signet-color: Canvas !important;
     --sbb-logo-word-mark-color: ButtonText !important;
   }
+
+  height: var(--sbb-logo-height);
 }
 
 :host([negative]:not([negative='false'])) {
